--- a/Testing/Code/BasicFilters/CMakeLists.txt
+++ b/Testing/Code/BasicFilters/CMakeLists.txt
@@ -1,22 +1,4 @@
 
-INCLUDE_DIRECTORIES(
-${ITK_SOURCE_DIR}/Code/BasicFilters
-)
-
-LINK_DIRECTORIES(
-${ITK_BINARY_DIR}/Code/BasicFilters
-)
-
-LINK_LIBRARIES (
-ITKBasicFilters 
-ITKCommon
-ITKIO
-ITKNumerics
-itkpng
-itkzlib
-ITKNumerics
-VXLNumerics
-)
 
 IF(ITK_WRAP_TCL)
 #  INCLUDE(${ITK_SOURCE_DIR}/Testing/Code/BasicFilters/CMakeListsTcl.txt)
@@ -125,107 +107,108 @@ ADD_TEST(itkHardConnectedComponentImageFilterTest itkBasicFiltersTests itkHardCo
 ADD_TEST(itkBloxBoundaryPointImageToBloxBoundaryProfileImageFilterTest itkBasicFiltersTests itkBloxBoundaryPointImageToBloxBoundaryProfileImageFilterTest)
 
 
-SOURCE_FILES(BasicFilters_SRCS
-itkChangeInformationImageFilterTest 
-itkCannyEdgeDetectionImageFilterTest 
-itkZeroCrossingBasedEdgeDetectionImageFilterTest 
-itkSobelEdgeDetectionImageFilterTest 
-itkDivideImageFilterTest 
-itkLaplacianImageFilterTest 
-itkZeroCrossingImageFilterTest 
-itkAsinImageFilterAndAdaptorTest 
-itkAcosImageFilterAndAdaptorTest 
-itkAtanImageFilterAndAdaptorTest 
-itkAdaptImageFilterTest 
-itkAdaptImageFilterTest2 
-itkBasicArchitectureTest 
-itkBinaryDilateImageFilterTest
-itkBinaryMagnitudeImageFilterTest
-itkBinaryMedianImageFilterTest
-itkBinaryThresholdImageFilterTest
-itkBSplineResampleImageFilterTest
-itkBloxBoundaryPointImageTest 
-itkBloxCoreAtomTest 
-itkConfidenceConnectedImageFilterTest 
-itkConnectedThresholdImageFilterTest 
-itkCosImageFilterAndAdaptorTest 
-itkCurvatureAnisotropicDiffusionImageFilterTest 
-itkCyclicReferences 
-itkDanielssonDistanceMapImageFilterTest 
-itkDifferenceOfGaussiansGradientTest 
-itkEdgePotentialImageFilterTest 
-itkEigenAnalysis2DImageFilterTest 
-itkIsolatedConnectedImageFilterTest 
-itkExpImageFilterAndAdaptorTest 
-itkExpandImageFilterTest 
-itkVectorExpandImageFilterTest 
-itkFilterDispatchTest 
-itkAddImageFilterTest 
-itkFlipImageFilterTest
-itkFloodFillIteratorTest 
-itkGaussianImageSourceTest
-itkHausdorffDistanceImageFilterTest 
-itkImageAdaptorNthElementTest 
-itkImageAdaptorPipeLineTest 
-itkImageToParametricSpaceFilterTest 
-itkImportImageTest 
-itkInteriorExteriorMeshFilterTest
-itkInterpolateImageFilterTest 
-itkJoinImageFilterTest 
-itkLog10ImageFilterAndAdaptorTest 
-itkLogImageFilterAndAdaptorTest 
-itkMaskImageFilterTest
-itkMeanImageFilterTest 
-itkMedianImageFilterTest 
-itkMultiplyImageFilterTest 
-itkMinimumMaximumImageFilterTest 
-itkNeighborhoodConnectedImageFilterTest 
-itkNormalizeImageFilterTest 
-itkPermuteAxesImageFilterTest 
-itkPlaheImageFilterTest 
-itkRecursiveGaussianImageFiltersTest
-itkReflectImageFilterTest 
-itkReflectiveImageRegionIteratorTest 
-itkResampleImageTest 
-itkRescaleIntensityImageFilterTest 
-itkSimilarityIndexImageFilterTest 
-itkShiftScaleImageFilterTest 
-itkShrinkImageTest 
-itkSparseFieldLayerTest
-itkStatisticsImageFilterTest 
-itkConstantPadImageTest 
-itkWrapPadImageTest 
-itkMirrorPadImageTest 
-itkExtractImageTest 
-itkCropImageFilterTest
-itkSpatialFunctionImageEvaluatorFilterTest 
-itkStreamingImageFilterTest 
-itkStreamingImageFilterTest2 
-itkSinImageFilterAndAdaptorTest 
-itkSqrtImageFilterAndAdaptorTest 
-itkSubtractImageFilterTest 
-itkTanImageFilterAndAdaptorTest 
-itkTernaryMagnitudeImageFilterTest 
-itkThresholdImageFilterTest 
-itkTransformMeshFilterTest 
-itkTwoOutputExampleImageFilterTest 
-itkVectorAnisotropicDiffusionImageFilterTest 
-itkGradientAnisotropicDiffusionImageFilterTest 
-itkGradientMagnitudeImageFilterTest 
-itkGradientImageFilterTest 
-itkGradientRecursiveGaussianFilterTest 
-itkNeighborhoodOperatorImageFilterTest 
-itkVectorNeighborhoodOperatorImageFilterTest 
-itkNaryAddImageFilterTest 
-itkDerivativeImageFilterTest 
-itkDiscreteGaussianImageFilterTest
-itkWarpImageFilterTest
-itkHardConnectedComponentImageFilterTest
-itkBloxBoundaryPointImageToBloxBoundaryProfileImageFilterTest
+SET(BasicFilters_SRCS
+itkChangeInformationImageFilterTest.cxx
+itkCannyEdgeDetectionImageFilterTest.cxx
+itkZeroCrossingBasedEdgeDetectionImageFilterTest.cxx
+itkSobelEdgeDetectionImageFilterTest.cxx
+itkDivideImageFilterTest.cxx
+itkLaplacianImageFilterTest.cxx
+itkZeroCrossingImageFilterTest.cxx
+itkAsinImageFilterAndAdaptorTest.cxx
+itkAcosImageFilterAndAdaptorTest.cxx
+itkAtanImageFilterAndAdaptorTest.cxx
+itkAdaptImageFilterTest.cxx
+itkAdaptImageFilterTest2.cxx
+itkBasicArchitectureTest.cxx
+itkBinaryDilateImageFilterTest.cxx
+itkBinaryMagnitudeImageFilterTest.cxx
+itkBinaryMedianImageFilterTest.cxx
+itkBinaryThresholdImageFilterTest.cxx
+itkBSplineResampleImageFilterTest.cxx
+itkBloxBoundaryPointImageTest.cxx
+itkBloxCoreAtomTest.cxx
+itkConfidenceConnectedImageFilterTest.cxx
+itkConnectedThresholdImageFilterTest.cxx
+itkCosImageFilterAndAdaptorTest.cxx
+itkCurvatureAnisotropicDiffusionImageFilterTest.cxx
+itkCyclicReferences.cxx
+itkDanielssonDistanceMapImageFilterTest.cxx
+itkDifferenceOfGaussiansGradientTest.cxx
+itkEdgePotentialImageFilterTest.cxx
+itkEigenAnalysis2DImageFilterTest.cxx
+itkIsolatedConnectedImageFilterTest.cxx
+itkExpImageFilterAndAdaptorTest.cxx
+itkExpandImageFilterTest.cxx
+itkVectorExpandImageFilterTest.cxx
+itkFilterDispatchTest.cxx
+itkAddImageFilterTest.cxx
+itkFlipImageFilterTest.cxx
+itkFloodFillIteratorTest.cxx
+itkGaussianImageSourceTest.cxx
+itkHausdorffDistanceImageFilterTest.cxx
+itkImageAdaptorNthElementTest.cxx
+itkImageAdaptorPipeLineTest.cxx
+itkImageToParametricSpaceFilterTest.cxx
+itkImportImageTest.cxx
+itkInteriorExteriorMeshFilterTest.cxx
+itkInterpolateImageFilterTest.cxx
+itkJoinImageFilterTest.cxx
+itkLog10ImageFilterAndAdaptorTest.cxx
+itkLogImageFilterAndAdaptorTest.cxx
+itkMaskImageFilterTest.cxx
+itkMeanImageFilterTest.cxx
+itkMedianImageFilterTest.cxx
+itkMultiplyImageFilterTest.cxx
+itkMinimumMaximumImageFilterTest.cxx
+itkNeighborhoodConnectedImageFilterTest.cxx
+itkNormalizeImageFilterTest.cxx
+itkPermuteAxesImageFilterTest.cxx
+itkPlaheImageFilterTest.cxx
+itkRecursiveGaussianImageFiltersTest.cxx
+itkReflectImageFilterTest.cxx
+itkReflectiveImageRegionIteratorTest.cxx
+itkResampleImageTest.cxx
+itkRescaleIntensityImageFilterTest.cxx
+itkSimilarityIndexImageFilterTest.cxx
+itkShiftScaleImageFilterTest.cxx
+itkShrinkImageTest.cxx
+itkSparseFieldLayerTest.cxx
+itkStatisticsImageFilterTest.cxx
+itkConstantPadImageTest.cxx
+itkWrapPadImageTest.cxx
+itkMirrorPadImageTest.cxx
+itkExtractImageTest.cxx
+itkCropImageFilterTest.cxx
+itkSpatialFunctionImageEvaluatorFilterTest.cxx
+itkStreamingImageFilterTest.cxx
+itkStreamingImageFilterTest2.cxx
+itkSinImageFilterAndAdaptorTest.cxx
+itkSqrtImageFilterAndAdaptorTest.cxx
+itkSubtractImageFilterTest.cxx
+itkTanImageFilterAndAdaptorTest.cxx
+itkTernaryMagnitudeImageFilterTest.cxx
+itkThresholdImageFilterTest.cxx
+itkTransformMeshFilterTest.cxx
+itkTwoOutputExampleImageFilterTest.cxx
+itkVectorAnisotropicDiffusionImageFilterTest.cxx
+itkGradientAnisotropicDiffusionImageFilterTest.cxx
+itkGradientMagnitudeImageFilterTest.cxx
+itkGradientImageFilterTest.cxx
+itkGradientRecursiveGaussianFilterTest.cxx
+itkNeighborhoodOperatorImageFilterTest.cxx
+itkVectorNeighborhoodOperatorImageFilterTest.cxx
+itkNaryAddImageFilterTest.cxx
+itkDerivativeImageFilterTest.cxx
+itkDiscreteGaussianImageFilterTest.cxx
+itkWarpImageFilterTest.cxx
+itkHardConnectedComponentImageFilterTest.cxx
+itkBloxBoundaryPointImageToBloxBoundaryProfileImageFilterTest.cxx
 )
 
 
 ADD_TEST(itkBasicFiltersHeaderTest itkBasicFiltersHeaderTest)
 ADD_EXECUTABLE(itkBasicFiltersHeaderTest itkBasicFiltersHeaderTest.cxx)
-
-ADD_EXECUTABLE(itkBasicFiltersTests itkBasicFiltersTests.cxx BasicFilters_SRCS)
+TARGET_LINK_LIBRARIES(itkBasicFiltersHeaderTest ITKIO ITKNumerics ITKBasicFilters)
+ADD_EXECUTABLE(itkBasicFiltersTests itkBasicFiltersTests.cxx ${BasicFilters_SRCS})
+TARGET_LINK_LIBRARIES(itkBasicFiltersTests ITKIO ITKNumerics ITKBasicFilters)
