--- a/Testing/Code/Common/CMakeLists.txt
+++ b/Testing/Code/Common/CMakeLists.txt
@@ -1,8 +1,3 @@
-LINK_LIBRARIES (
-ITKCommon
-ITKNumerics
-)
-
 IF(ITK_WRAP_TCL)
 #  INCLUDE(${ITK_SOURCE_DIR}/Testing/Code/Common/CMakeListsTcl.txt)
 ENDIF(ITK_WRAP_TCL)
@@ -81,78 +76,82 @@ ADD_TEST(itkSplineKernelTransformTest itkCommonTests itkSplineKernelTransformTes
 ADD_TEST(itkEllipsoidInteriorExteriorSpatialFunctionTest itkCommonTests itkEllipsoidInteriorExteriorSpatialFunctionTest)
 ADD_TEST(itkSymmetricEllipsoidInteriorExteriorSpatialFunctionTest itkCommonTests itkSymmetricEllipsoidInteriorExteriorSpatialFunctionTest)
 
-SOURCE_FILES(BasicTests_SRCS
-itkModifiedTimeTest
-itkAdaptorComparisonTest 
-itkAffineTransformTest 
-itkArrayTest 
-itkArray2Test 
-itkAutoPointerTest
-itkAzimuthElevationToCartesianTransformTest 
-itkBinaryThresholdImageFunctionTest 
-itkBoundingBoxTest
-itkBSplineDeformableTransformTest 
-itkBSplineInterpolateImageFunctionTest
-itkBSplineInterpolationWeightFunctionTest
-itkBSplineKernelFunctionTest
-itkByteSwapTest 
-itkConstNeighborhoodIteratorTest 
-itkConstRandomAccessNeighborhoodIteratorTest 
-itkConstSmartNeighborhoodIteratorTest 
-itkCovariantVectorGeometryTest 
-itkDataTypeTest 
-itkDynamicMeshTest 
-itkEuler2DTransformTest
-itkExceptionObjectTest 
-itkHashTableTest 
-itkImageAdaptorTest 
-itkImageIteratorTest 
-itkImageIteratorsForwardBackwardTest 
-itkImageLinearIteratorTest 
-itkImageRandomIteratorTest 
-itkImageRegionTest 
-itkImageRegionExclusionIteratorWithIndexTest 
-itkImageSliceIteratorTest 
-itkIteratorTests 
-itkLevelSetFunctionTest
-itkLightObjectTest 
-itkMatrixTest 
-itkMapContainerTest 
-itkMemoryLeakTest 
-itkMeshTest 
-itkMeshFstreamTest 
-itkNeighborhoodTest 
-itkNeighborhoodIteratorTest 
-itkNeighborhoodOperatorTest 
-itkObjectStoreTest
-itkPixelAccessTest 
-itkPointGeometryTest 
-itkPointSetTest 
-itkRigid2DTransformTest 
-itkRigid3DTransformTest 
-itkRigid3DPerspectiveTransformTest 
-itkRandomAccessNeighborhoodIteratorTest 
-itkRGBPixelTest 
-itkScaleTransformTest 
-itkSliceIteratorTest 
-itkSmartNeighborhoodIteratorTest 
-itkSmartPointerTest 
-itkSpatialFunctionTest 
-itkSplineKernelTransformTest 
-itkThreadDefsTest 
-itkTimeProbesTest 
-itkTransformTest 
-itkTranslationTransformTest 
-itkVectorGeometryTest 
-itkVersorTest 
-itkVersorRigid3DTransformTest 
-itkVectorTest 
-itkVectorInterpolateImageFunctionTest 
-itkEllipsoidInteriorExteriorSpatialFunctionTest 
-itkSymmetricEllipsoidInteriorExteriorSpatialFunctionTest 
+SET(BasicTests_SRCS
+itkModifiedTimeTest.cxx
+itkAdaptorComparisonTest.cxx
+itkAffineTransformTest.cxx
+itkArrayTest.cxx
+itkArray2Test.cxx
+itkAutoPointerTest.cxx
+itkAzimuthElevationToCartesianTransformTest.cxx
+itkBinaryThresholdImageFunctionTest.cxx
+itkBoundingBoxTest.cxx
+itkBSplineDeformableTransformTest.cxx
+itkBSplineInterpolateImageFunctionTest.cxx
+itkBSplineInterpolationWeightFunctionTest.cxx
+itkBSplineKernelFunctionTest.cxx
+itkByteSwapTest.cxx
+itkConstNeighborhoodIteratorTest.cxx
+itkConstRandomAccessNeighborhoodIteratorTest.cxx
+itkConstSmartNeighborhoodIteratorTest.cxx
+itkCovariantVectorGeometryTest.cxx
+itkDataTypeTest.cxx
+itkDynamicMeshTest.cxx
+itkEuler2DTransformTest.cxx
+itkExceptionObjectTest.cxx
+itkHashTableTest.cxx
+itkImageAdaptorTest.cxx
+itkImageIteratorTest.cxx
+itkImageIteratorsForwardBackwardTest.cxx
+itkImageLinearIteratorTest.cxx
+itkImageRandomIteratorTest.cxx
+itkImageRegionTest.cxx
+itkImageRegionExclusionIteratorWithIndexTest.cxx
+itkImageSliceIteratorTest.cxx
+itkIteratorTests.cxx
+itkLevelSetFunctionTest.cxx
+itkLightObjectTest.cxx
+itkMatrixTest.cxx
+itkMapContainerTest.cxx
+itkMemoryLeakTest.cxx
+itkMeshTest.cxx
+itkMeshFstreamTest.cxx
+itkNeighborhoodTest.cxx
+itkNeighborhoodIteratorTest.cxx
+itkNeighborhoodOperatorTest.cxx
+itkObjectStoreTest.cxx
+itkPixelAccessTest.cxx
+itkPointGeometryTest.cxx
+itkPointSetTest.cxx
+itkRigid2DTransformTest.cxx
+itkRigid3DTransformTest.cxx
+itkRigid3DPerspectiveTransformTest.cxx
+itkRandomAccessNeighborhoodIteratorTest.cxx
+itkRGBPixelTest.cxx
+itkScaleTransformTest.cxx
+itkSliceIteratorTest.cxx
+itkSmartNeighborhoodIteratorTest.cxx
+itkSmartPointerTest.cxx
+itkSpatialFunctionTest.cxx
+itkSplineKernelTransformTest.cxx
+itkThreadDefsTest.cxx
+itkTimeProbesTest.cxx
+itkTransformTest.cxx
+itkTranslationTransformTest.cxx
+itkVectorGeometryTest.cxx
+itkVersorTest.cxx
+itkVersorRigid3DTransformTest.cxx
+itkVectorTest.cxx
+itkVectorInterpolateImageFunctionTest.cxx
+itkEllipsoidInteriorExteriorSpatialFunctionTest.cxx
+itkSymmetricEllipsoidInteriorExteriorSpatialFunctionTest.cxx
 )
 
 
 ADD_EXECUTABLE(itkCommonHeaderTest itkCommonHeaderTest.cxx)
-ADD_EXECUTABLE(itkCommonTests itkCommonTests.cxx BasicTests_SRCS)
+ADD_EXECUTABLE(itkCommonTests itkCommonTests.cxx ${BasicTests_SRCS})
+TARGET_LINK_LIBRARIES(itkCommonHeaderTest ITKCommon)
+TARGET_LINK_LIBRARIES(itkCommonTests ITKCommon)
+
+
 
