--- a/Testing/Code/Numerics/CMakeLists.txt
+++ b/Testing/Code/Numerics/CMakeLists.txt
@@ -23,21 +23,21 @@ ADD_TEST(itkRegularStepGradientDescentOptimizerTest itkNumericsTests itkRegularS
 ADD_TEST(itkVersorTransformOptimizerTest itkNumericsTests itkVersorTransformOptimizerTest)
 ADD_TEST(itkNumericsHeaderTest itkNumericsHeaderTest)
 
-SOURCE_FILES(Numerics_SRCS
-itkAmoebaOptimizerTest 
-itkConjugateGradientOptimizerTest 
-itkGradientDescentOptimizerTest 
-itkLevenbergMarquardtOptimizerTest
-itkLBFGSOptimizerTest
-itkMultivariateLegendrePolynomialTest
-itkNumericsTest
-itkOptimizersHierarchyTest
-itkRegularStepGradientDescentOptimizerTest 
-itkVersorTransformOptimizerTest
+SET(Numerics_SRCS
+itkAmoebaOptimizerTest.cxx
+itkConjugateGradientOptimizerTest.cxx
+itkGradientDescentOptimizerTest.cxx
+itkLevenbergMarquardtOptimizerTest.cxx
+itkLBFGSOptimizerTest.cxx
+itkMultivariateLegendrePolynomialTest.cxx
+itkNumericsTest.cxx
+itkOptimizersHierarchyTest.cxx
+itkRegularStepGradientDescentOptimizerTest.cxx
+itkVersorTransformOptimizerTest.cxx
 )
 
 ADD_EXECUTABLE(itkNumericsHeaderTest itkNumericsHeaderTest.cxx)
 TARGET_LINK_LIBRARIES(itkNumericsHeaderTest ITKCommon ITKNumerics)
-ADD_EXECUTABLE(itkNumericsTests itkNumericsTests.cxx Numerics_SRCS)
+ADD_EXECUTABLE(itkNumericsTests itkNumericsTests.cxx ${Numerics_SRCS})
 TARGET_LINK_LIBRARIES(itkNumericsTests ITKCommon ITKNumerics)
 
