--- a/Code/Numerics/vxl/CMakeLists.txt
+++ b/Code/Numerics/vxl/CMakeLists.txt
@@ -1,277 +1,280 @@
-
 AUX_SOURCE_DIRECTORY(vnl/Templates VXLNumerics_SRCS)
 AUX_SOURCE_DIRECTORY(vnl/algo/Templates VXLNumerics_SRCS)
 AUX_SOURCE_DIRECTORY(v3p/netlib/Templates VXLNumerics_SRCS)
 
-SOURCE_FILES(VXLNumerics_SRCS
-vnl/vnl_alloc
-vnl/vnl_binary
-vnl/vnl_complex
-vnl/vnl_complex_traits
-vnl/vnl_copy
-vnl/vnl_cost_function
-vnl/vnl_cross_product_matrix
-vnl/vnl_double_2
-vnl/vnl_double_2x3
-vnl/vnl_double_3
-vnl/vnl_double_3x2
-vnl/vnl_double_4
-vnl/vnl_error
-vnl/vnl_fastops
-vnl/vnl_float_2
-vnl/vnl_float_3
-vnl/vnl_float_4
-vnl/vnl_identity_3x3
-vnl/vnl_int_2
-vnl/vnl_int_3
-vnl/vnl_int_4
-vnl/vnl_int_matrix
-vnl/vnl_least_squares_cost_function
-vnl/vnl_least_squares_function
-vnl/vnl_linear_operators_3
-vnl/vnl_linear_system
-vnl/vnl_math
-vnl/vnl_matlab_filewrite
-vnl/vnl_matlab_header
-vnl/vnl_matlab_print
-vnl/vnl_matlab_print2
-vnl/vnl_matlab_print_format
-vnl/vnl_matlab_print_scalar
-vnl/vnl_matlab_read
-vnl/vnl_matlab_write
-vnl/vnl_matops
-vnl/vnl_nonlinear_minimizer
-vnl/vnl_numeric_limits
-vnl/vnl_numeric_traits
-vnl/vnl_real_npolynomial
-vnl/vnl_real_polynomial
-vnl/vnl_rotation_matrix
-vnl/vnl_sample
-vnl/vnl_sparse_matrix_linear_system
-vnl/vnl_test
-vnl/vnl_trace
-vnl/vnl_transpose
-vnl/vnl_unary_function
-vnl/algo/vnl_amoeba
-vnl/algo/vnl_brent
-vnl/algo/vnl_chi_squared
-vnl/algo/vnl_cholesky
-vnl/algo/vnl_complex_eigensystem
-vnl/algo/vnl_conjugate_gradient
-vnl/algo/vnl_cpoly_roots
-vnl/algo/vnl_determinant
-vnl/algo/vnl_discrete_diff
-vnl/algo/vnl_fft
-vnl/algo/vnl_fftxd_prime_factors
-vnl/algo/vnl_gaussian_kernel_1d
-vnl/algo/vnl_generalized_eigensystem
-vnl/algo/vnl_lbfgs
-vnl/algo/vnl_levenberg_marquardt
-vnl/algo/vnl_lsqr
-vnl/algo/vnl_powell
-vnl/algo/vnl_real_eigensystem
-vnl/algo/vnl_rnpoly_solve
-vnl/algo/vnl_rpoly_roots
-vnl/algo/vnl_sparse_symmetric_eigensystem
-vnl/algo/vnl_symmetric_eigensystem
-v3p/netlib/qrsolv
-v3p/netlib/lmpar
-v3p/netlib/fdjac2
-v3p/netlib/qrfac
-v3p/netlib/enorm
-v3p/netlib/c_sqrt
-v3p/netlib/z_sqrt
-v3p/netlib/cdabs
-v3p/netlib/cdsqrt
-v3p/netlib/F77_aloc
-v3p/netlib/exit
-v3p/netlib/s_cmp
-v3p/netlib/d_lg10
-v3p/netlib/s_cat
-v3p/netlib/s_copy
-v3p/netlib/d_sign
-v3p/netlib/d_cnjg
-v3p/netlib/d_imag
-v3p/netlib/z_div
-v3p/netlib/z_abs
-v3p/netlib/cabs
-v3p/netlib/c_abs
-v3p/netlib/c_div
-v3p/netlib/sig_die
-v3p/netlib/r_sign
-v3p/netlib/r_imag
-v3p/netlib/r_cnjg
-v3p/netlib/pow_ii
-v3p/netlib/pow_ri
-v3p/netlib/pow_di
-v3p/netlib/izamax
-v3p/netlib/daxpy
-v3p/netlib/dcopy
-v3p/netlib/ddot
-v3p/netlib/dnrm2
-v3p/netlib/drot
-v3p/netlib/drotg
-v3p/netlib/dscal
-v3p/netlib/dasum
-v3p/netlib/dzasum
-v3p/netlib/dswap
-v3p/netlib/dgemv
-v3p/netlib/dger
-v3p/netlib/saxpy
-v3p/netlib/scopy
-v3p/netlib/sdot
-v3p/netlib/snrm2
-v3p/netlib/srot
-v3p/netlib/srotg
-v3p/netlib/sscal
-v3p/netlib/sasum
-v3p/netlib/sswap
-v3p/netlib/sgemv
-v3p/netlib/sger
-v3p/netlib/caxpy
-v3p/netlib/ccopy
-v3p/netlib/cdotc
-v3p/netlib/csrot
-v3p/netlib/scnrm2
-v3p/netlib/cscal
-v3p/netlib/cswap
-v3p/netlib/zcopy
-v3p/netlib/zdotu
-v3p/netlib/zdscal
-v3p/netlib/zgemm
-v3p/netlib/zgemv
-v3p/netlib/zgerc
-v3p/netlib/ztrmm
-v3p/netlib/ztrmv
-v3p/netlib/ztrsv
-v3p/netlib/lsqr
-v3p/netlib/ssvdc
-v3p/netlib/dsvdc
-v3p/netlib/csvdc
-v3p/netlib/zsvdc
-v3p/netlib/sqrdc
-v3p/netlib/dqrdc
-v3p/netlib/cqrdc
-v3p/netlib/zqrdc
-v3p/netlib/sqrsl
-v3p/netlib/dqrsl
-v3p/netlib/zqrsl
-v3p/netlib/cqrsl
-v3p/netlib/dpofa
-v3p/netlib/dpoco
-v3p/netlib/dposl
-v3p/netlib/dpodi
-v3p/netlib/isamax
-v3p/netlib/idamax
-v3p/netlib/rsg
-v3p/netlib/rg
-v3p/netlib/rs
-v3p/netlib/tql1
-v3p/netlib/tql2
-v3p/netlib/tred1
-v3p/netlib/tred2
-v3p/netlib/lmdif
-v3p/netlib/lmder
-v3p/netlib/lmder1
-v3p/netlib/pythag
-v3p/netlib/rpoly
-v3p/netlib/dtrans
-v3p/netlib/trans
-v3p/netlib/machineparams
-v3p/netlib/dgpfa
-v3p/netlib/dgpfa3f
-v3p/netlib/dsetgpfa
-v3p/netlib/gpfa2f
-v3p/netlib/gpfa5f
-v3p/netlib/dgpfa2f
-v3p/netlib/dgpfa5f
-v3p/netlib/gpfa
-v3p/netlib/gpfa3f
-v3p/netlib/setgpfa
-v3p/netlib/cg
-v3p/netlib/camsun
-v3p/netlib/dnlaso
-v3p/netlib/lbfgs
-v3p/netlib/lbfgs-lb1
-v3p/netlib/ilaenv
-v3p/netlib/izmax1
-v3p/netlib/xerbla
-v3p/netlib/lsame
-v3p/netlib/dlamch
-v3p/netlib/slamch
-v3p/netlib/dgeqpf
-v3p/netlib/dgeqr2
-v3p/netlib/dgerq2
-v3p/netlib/dggsvd
-v3p/netlib/dggsvp
-v3p/netlib/dlacpy
-v3p/netlib/dlags2
-v3p/netlib/dlange
-v3p/netlib/dlapll
-v3p/netlib/dlapmt
-v3p/netlib/dlapy2
-v3p/netlib/dlarf
-v3p/netlib/dlarfg
-v3p/netlib/dlartg
-v3p/netlib/dlas2
-v3p/netlib/dlaset
-v3p/netlib/dlassq
-v3p/netlib/dlasv2
-v3p/netlib/dlabad
-v3p/netlib/dladiv
-v3p/netlib/dlapy3
-v3p/netlib/dorg2r
-v3p/netlib/dorm2r
-v3p/netlib/dormr2
-v3p/netlib/dtgsja
-v3p/netlib/sggsvd
-v3p/netlib/sgeqpf
-v3p/netlib/sgeqr2
-v3p/netlib/sgerq2
-v3p/netlib/sggsvp
-v3p/netlib/slacpy
-v3p/netlib/slags2
-v3p/netlib/slange
-v3p/netlib/slapll
-v3p/netlib/slapmt
-v3p/netlib/slapy2
-v3p/netlib/slarf
-v3p/netlib/slarfg
-v3p/netlib/slartg
-v3p/netlib/slas2
-v3p/netlib/slaset
-v3p/netlib/slassq
-v3p/netlib/slasv2
-v3p/netlib/sorg2r
-v3p/netlib/sorm2r
-v3p/netlib/sormr2
-v3p/netlib/stgsja
-v3p/netlib/zgebak
-v3p/netlib/zgebal
-v3p/netlib/zgeev
-v3p/netlib/zgehd2
-v3p/netlib/zgehrd
-v3p/netlib/zhseqr
-v3p/netlib/zlacgv
-v3p/netlib/zlacpy
-v3p/netlib/zladiv
-v3p/netlib/zlahqr
-v3p/netlib/zlahrd
-v3p/netlib/zlange
-v3p/netlib/zlanhs
-v3p/netlib/zlarf
-v3p/netlib/zlarfb
-v3p/netlib/zlarfg
-v3p/netlib/zlarft
-v3p/netlib/zlarfx
-v3p/netlib/zlascl
-v3p/netlib/zlaset
-v3p/netlib/zlassq
-v3p/netlib/zlatrs
-v3p/netlib/ztrevc
-v3p/netlib/zung2r
-v3p/netlib/zunghr
-v3p/netlib/zungqr
+SET(VXLNumerics_SRCS ${VXLNumerics_SRCS}
+vnl/vnl_alloc.cxx
+vnl/vnl_binary.cxx
+vnl/vnl_complex.cxx
+vnl/vnl_complex_traits.cxx
+vnl/vnl_copy.cxx
+vnl/vnl_cost_function.cxx
+vnl/vnl_cross_product_matrix.cxx
+vnl/vnl_double_2.cxx
+vnl/vnl_double_2x3.cxx
+vnl/vnl_double_3.cxx
+vnl/vnl_double_3x2.cxx
+vnl/vnl_double_4.cxx
+vnl/vnl_error.cxx
+vnl/vnl_fastops.cxx
+vnl/vnl_float_2.cxx
+vnl/vnl_float_3.cxx
+vnl/vnl_float_4.cxx
+vnl/vnl_identity_3x3.cxx
+vnl/vnl_int_2.cxx
+vnl/vnl_int_3.cxx
+vnl/vnl_int_4.cxx
+vnl/vnl_int_matrix.cxx
+vnl/vnl_least_squares_cost_function.cxx
+vnl/vnl_least_squares_function.cxx
+vnl/vnl_linear_operators_3.cxx
+vnl/vnl_linear_system.cxx
+vnl/vnl_math.cxx
+vnl/vnl_matlab_filewrite.cxx
+vnl/vnl_matlab_header.cxx
+vnl/vnl_matlab_print.cxx
+vnl/vnl_matlab_print2.cxx
+vnl/vnl_matlab_print_format.cxx
+vnl/vnl_matlab_print_scalar.cxx
+vnl/vnl_matlab_read.cxx
+vnl/vnl_matlab_write.cxx
+vnl/vnl_matops.cxx
+vnl/vnl_nonlinear_minimizer.cxx
+vnl/vnl_numeric_limits.cxx
+vnl/vnl_numeric_traits.cxx
+vnl/vnl_real_npolynomial.cxx
+vnl/vnl_real_polynomial.cxx
+vnl/vnl_rotation_matrix.cxx
+vnl/vnl_sample.cxx
+vnl/vnl_sparse_matrix_linear_system.cxx
+vnl/vnl_test.cxx
+vnl/vnl_trace.cxx
+vnl/vnl_transpose.cxx
+vnl/vnl_unary_function.cxx
+vnl/algo/vnl_amoeba.cxx
+vnl/algo/vnl_brent.cxx
+vnl/algo/vnl_chi_squared.cxx
+vnl/algo/vnl_cholesky.cxx
+vnl/algo/vnl_complex_eigensystem.cxx
+vnl/algo/vnl_conjugate_gradient.cxx
+vnl/algo/vnl_cpoly_roots.cxx
+vnl/algo/vnl_determinant.cxx
+vnl/algo/vnl_discrete_diff.cxx
+vnl/algo/vnl_fft.cxx
+vnl/algo/vnl_fftxd_prime_factors.cxx
+vnl/algo/vnl_gaussian_kernel_1d.cxx
+vnl/algo/vnl_generalized_eigensystem.cxx
+vnl/algo/vnl_lbfgs.cxx
+vnl/algo/vnl_levenberg_marquardt.cxx
+vnl/algo/vnl_lsqr.cxx
+vnl/algo/vnl_powell.cxx
+vnl/algo/vnl_real_eigensystem.cxx
+vnl/algo/vnl_rnpoly_solve.cxx
+vnl/algo/vnl_rpoly_roots.cxx
+vnl/algo/vnl_sparse_symmetric_eigensystem.cxx
+vnl/algo/vnl_symmetric_eigensystem.cxx
+v3p/netlib/qrsolv.c
+v3p/netlib/lmpar.c
+v3p/netlib/fdjac2.c
+v3p/netlib/qrfac.c
+v3p/netlib/enorm.c
+v3p/netlib/c_sqrt.c
+v3p/netlib/z_sqrt.c
+v3p/netlib/cdabs.c
+v3p/netlib/cdsqrt.c
+v3p/netlib/F77_aloc.c
+v3p/netlib/exit.c
+v3p/netlib/s_cmp.c
+v3p/netlib/d_lg10.c
+v3p/netlib/s_cat.c
+v3p/netlib/s_copy.c
+v3p/netlib/d_sign.c
+v3p/netlib/d_cnjg.c
+v3p/netlib/d_imag.c
+v3p/netlib/z_div.c
+v3p/netlib/z_abs.c
+v3p/netlib/cabs.c
+v3p/netlib/c_abs.c
+v3p/netlib/c_div.c
+v3p/netlib/sig_die.c
+v3p/netlib/r_sign.c
+v3p/netlib/r_imag.c
+v3p/netlib/r_cnjg.c
+v3p/netlib/pow_ii.c
+v3p/netlib/pow_ri.c
+v3p/netlib/pow_di.c
+v3p/netlib/izamax.c
+v3p/netlib/daxpy.c
+v3p/netlib/dcopy.c
+v3p/netlib/ddot.c
+v3p/netlib/dnrm2.c
+v3p/netlib/drot.c
+v3p/netlib/drotg.c
+v3p/netlib/dscal.c
+v3p/netlib/dasum.c
+v3p/netlib/dzasum.c
+v3p/netlib/dswap.c
+v3p/netlib/dgemv.c
+v3p/netlib/dger.c
+v3p/netlib/saxpy.c
+v3p/netlib/scopy.c
+v3p/netlib/sdot.c
+v3p/netlib/snrm2.c
+v3p/netlib/srot.c
+v3p/netlib/srotg.c
+v3p/netlib/sscal.c
+v3p/netlib/sasum.c
+v3p/netlib/sswap.c
+v3p/netlib/sgemv.c
+v3p/netlib/sger.c
+v3p/netlib/caxpy.c
+v3p/netlib/ccopy.c
+v3p/netlib/cdotc.c
+v3p/netlib/csrot.c
+v3p/netlib/scnrm2.c
+v3p/netlib/cscal.c
+v3p/netlib/cswap.c
+v3p/netlib/zcopy.c
+v3p/netlib/zdotu.c
+v3p/netlib/zdscal.c
+v3p/netlib/zgemm.c
+v3p/netlib/zgemv.c
+v3p/netlib/zgerc.c
+v3p/netlib/ztrmm.c
+v3p/netlib/ztrmv.c
+v3p/netlib/ztrsv.c
+v3p/netlib/lsqr.c
+v3p/netlib/ssvdc.c
+v3p/netlib/dsvdc.c
+v3p/netlib/csvdc.c
+v3p/netlib/zsvdc.c
+v3p/netlib/sqrdc.c
+v3p/netlib/dqrdc.c
+v3p/netlib/cqrdc.c
+v3p/netlib/zqrdc.c
+v3p/netlib/sqrsl.c
+v3p/netlib/dqrsl.c
+v3p/netlib/zqrsl.c
+v3p/netlib/cqrsl.c
+v3p/netlib/dpofa.c
+v3p/netlib/dpoco.c
+v3p/netlib/dposl.c
+v3p/netlib/dpodi.c
+v3p/netlib/isamax.c
+v3p/netlib/idamax.c
+v3p/netlib/rsg.c
+v3p/netlib/rg.c
+v3p/netlib/rs.c
+v3p/netlib/tql1.c
+v3p/netlib/tql2.c
+v3p/netlib/tred1.c
+v3p/netlib/tred2.c
+v3p/netlib/lmdif.c
+v3p/netlib/lmder.c
+v3p/netlib/lmder1.c
+v3p/netlib/pythag.c
+v3p/netlib/rpoly.c
+v3p/netlib/dtrans.c
+v3p/netlib/trans.c
+v3p/netlib/machineparams.c
+v3p/netlib/dgpfa.c
+v3p/netlib/dgpfa3f.c
+v3p/netlib/dsetgpfa.c
+v3p/netlib/gpfa2f.c
+v3p/netlib/gpfa5f.c
+v3p/netlib/dgpfa2f.c
+v3p/netlib/dgpfa5f.c
+v3p/netlib/gpfa.c
+v3p/netlib/gpfa3f.c
+v3p/netlib/setgpfa.c
+v3p/netlib/cg.c
+v3p/netlib/camsun.c
+v3p/netlib/dnlaso.c
+v3p/netlib/lbfgs.c
+v3p/netlib/lbfgs-lb1.c
+v3p/netlib/ilaenv.c
+v3p/netlib/izmax1.c
+v3p/netlib/xerbla.c
+v3p/netlib/lsame.c
+v3p/netlib/dlamch.c
+v3p/netlib/slamch.c
+v3p/netlib/dgeqpf.c
+v3p/netlib/dgeqr2.c
+v3p/netlib/dgerq2.c
+v3p/netlib/dggsvd.c
+v3p/netlib/dggsvp.c
+v3p/netlib/dlacpy.c
+v3p/netlib/dlags2.c
+v3p/netlib/dlange.c
+v3p/netlib/dlapll.c
+v3p/netlib/dlapmt.c
+v3p/netlib/dlapy2.c
+v3p/netlib/dlarf.c
+v3p/netlib/dlarfg.c
+v3p/netlib/dlartg.c
+v3p/netlib/dlas2.c
+v3p/netlib/dlaset.c
+v3p/netlib/dlassq.c
+v3p/netlib/dlasv2.c
+v3p/netlib/dlabad.c
+v3p/netlib/dladiv.c
+v3p/netlib/dlapy3.c
+v3p/netlib/dorg2r.c
+v3p/netlib/dorm2r.c
+v3p/netlib/dormr2.c
+v3p/netlib/dtgsja.c
+v3p/netlib/sggsvd.c
+v3p/netlib/sgeqpf.c
+v3p/netlib/sgeqr2.c
+v3p/netlib/sgerq2.c
+v3p/netlib/sggsvp.c
+v3p/netlib/slacpy.c
+v3p/netlib/slags2.c
+v3p/netlib/slange.c
+v3p/netlib/slapll.c
+v3p/netlib/slapmt.c
+v3p/netlib/slapy2.c
+v3p/netlib/slarf.c
+v3p/netlib/slarfg.c
+v3p/netlib/slartg.c
+v3p/netlib/slas2.c
+v3p/netlib/slaset.c
+v3p/netlib/slassq.c
+v3p/netlib/slasv2.c
+v3p/netlib/sorg2r.c
+v3p/netlib/sorm2r.c
+v3p/netlib/sormr2.c
+v3p/netlib/stgsja.c
+v3p/netlib/zgebak.c
+v3p/netlib/zgebal.c
+v3p/netlib/zgeev.c
+v3p/netlib/zgehd2.c
+v3p/netlib/zgehrd.c
+v3p/netlib/zhseqr.c
+v3p/netlib/zlacgv.c
+v3p/netlib/zlacpy.c
+v3p/netlib/zladiv.c
+v3p/netlib/zlahqr.c
+v3p/netlib/zlahrd.c
+v3p/netlib/zlange.c
+v3p/netlib/zlanhs.c
+v3p/netlib/zlarf.c
+v3p/netlib/zlarfb.c
+v3p/netlib/zlarfg.c
+v3p/netlib/zlarft.c
+v3p/netlib/zlarfx.c
+v3p/netlib/zlascl.c
+v3p/netlib/zlaset.c
+v3p/netlib/zlassq.c
+v3p/netlib/zlatrs.c
+v3p/netlib/ztrevc.c
+v3p/netlib/zung2r.c
+v3p/netlib/zunghr.c
+v3p/netlib/zungqr.c
 )
 
-ADD_LIBRARY(VXLNumerics VXLNumerics_SRCS)
+ADD_LIBRARY(VXLNumerics ${VXLNumerics_SRCS})
+IF(UNIX)
+  TARGET_LINK_LIBRARIES(VXLNumerics -lm)
+ENDIF(UNIX)
+
