--- a/Utilities/zlib/CMakeLists.txt
+++ b/Utilities/zlib/CMakeLists.txt
@@ -1,7 +1,7 @@
 PROJECT(ITKZLIB)
 
 # source files for zlib
-SOURCE_FILES(ZLIB_SRCS
+SET(ZLIB_SRCS
 adler32.c   gzio.c      inftrees.c  uncompr.c
 compress.c  infblock.c  infutil.c   zutil.c
 crc32.c     infcodes.c  
@@ -20,12 +20,12 @@ IF(WIN32)
   ENDIF(BUILD_SHARED_LIBS)
   IF(NOT UNIX)
     IF(NOT BORLAND)
-       SOURCE_FILES(ZLIB_SRCS zlib.def zlib.rc  )
+           SET(ZLIB_SRCS ${ZLIB_SRCS} zlib.def zlib.rc  )
     ENDIF(NOT BORLAND)  
   ENDIF(NOT UNIX)
     
 ENDIF(WIN32)
 
-ADD_LIBRARY(itkzlib ZLIB_SRCS)
+ADD_LIBRARY(itkzlib ${ZLIB_SRCS})
 
 INSTALL_TARGETS(/lib/insight itkzlib)
