ENH: move cmake list files to cmake 1.4

--- a/Utilities/stdlib/CMakeLists.txt
+++ b/Utilities/stdlib/CMakeLists.txt
@@ -2,13 +2,13 @@
 # for providing this makefile.
 
 IF(CMAKE_COMPILER_IS_GNUCXX)
-   SOURCE_FILES(C_LOCALE_SRCS c_locale_glibc/c_locale_glibc.c)
+   SET(C_LOCALE_SRCS c_locale_glibc/c_locale_glibc.c)
    ADD_DEFINITIONS(-D__STL_USE_NEW_IOSTREAMS)
 ELSE(CMAKE_COMPILER_IS_GNUCXX)
-   SOURCE_FILES(C_LOCALE_SRCS c_locale_stub.cxx)
+   SET(C_LOCALE_SRCS c_locale_stub.cxx)
 ENDIF(CMAKE_COMPILER_IS_GNUCXX)
 
-SOURCE_FILES(IOSTREAM_SRCS 
+SET(IOSTREAM_SRCS 
 	iostream.cxx    codecvt.cxx locale.cxx		
 	streambuf.cxx   collate.cxx message_facets.cxx	
         strstream.cxx   ctype.cxx   monetary.cxx	
@@ -16,10 +16,10 @@ SOURCE_FILES(IOSTREAM_SRCS
         ios.cxx         sstream.cxx stdio_streambuf.cxx	
 )
 
-SOURCE_FILES(COMPLEX_SRCS
+SET(COMPLEX_SRCS
 	complex.cxx    complex_exp.cxx 			
 	complex_io.cxx complex_trig.cxx			
 )
 
-ADD_LIBRARY(Cio STATIC C_LOCALE_SRCS IOSTREAM_SRCS COMPLEX_SRCS)
+ADD_LIBRARY(Cio ${STATIC C_LOCALE_SRCS} ${IOSTREAM_SRCS} ${COMPLEX_SRCS})
 
