ENH: move cmake list files to cmake 1.4. (updated by lorensen)

--- a/Utilities/MetaIO/tests/CMakeLists.txt
+++ b/Utilities/MetaIO/tests/CMakeLists.txt
@@ -1,20 +1,20 @@
-SOURCE_FILES( testMeta1Utils_SRCS testMeta1Utils )
+SET( testMeta1Utils_SRCS testMeta1Utils.cxx )
 ADD_EXECUTABLE( testMeta1Utils testMeta1Utils_SRCS )
 
-SOURCE_FILES( testMeta2Object_SRCS testMeta2Object )
+SET( testMeta2Object_SRCS testMeta2Object.cxx )
 ADD_EXECUTABLE( testMeta2Object testMeta2Object_SRCS )
 
-SOURCE_FILES( testMeta3Image_SRCS testMeta3Image )
+SET( testMeta3Image_SRCS testMeta3Image.cxx )
 ADD_EXECUTABLE( testMeta3Image testMeta3Image_SRCS )
 
-SOURCE_FILES( testMeta4Tube_SRCS testMeta4Tube )
+SET( testMeta4Tube_SRCS testMeta4Tube.cxx )
 ADD_EXECUTABLE( testMeta4Tube testMeta4Tube_SRCS )
 
-SOURCE_FILES( testMeta5Blob_SRCS testMeta5Blob )
+SET( testMeta5Blob_SRCS testMeta5Blob.cxx )
 ADD_EXECUTABLE( testMeta5Blob testMeta5Blob_SRCS )
 
-SOURCE_FILES( testMeta6Surface_SRCS testMeta6Surface )
+SET( testMeta6Surface_SRCS testMeta6Surface.cxx )
 ADD_EXECUTABLE( testMeta6Surface testMeta6Surface_SRCS )
 
-SOURCE_FILES( testMeta7Line_SRCS testMeta7Line )
+SET( testMeta7Line_SRCS testMeta7Line.cxx )
 ADD_EXECUTABLE( testMeta7Line testMeta7Line_SRCS )
