ENH: move cmake list files to cmake 1.4. (updated by lorensen)

--- a/Utilities/stdlib/CMakeLists.txt
+++ b/Utilities/stdlib/CMakeLists.txt
@@ -21,5 +21,5 @@ SET(COMPLEX_SRCS
 	complex_io.cxx complex_trig.cxx			
 )
 
-ADD_LIBRARY(Cio ${STATIC C_LOCALE_SRCS} ${IOSTREAM_SRCS} ${COMPLEX_SRCS})
+ADD_LIBRARY(Cio STATIC ${C_LOCALE_SRCS} ${IOSTREAM_SRCS} ${COMPLEX_SRCS})
 
