ERR: SGIs require the VXLNumerics library to be specified here.(upadte by lorensen)

--- a/Testing/CMakeLists.txt
+++ b/Testing/CMakeLists.txt
@@ -2,8 +2,13 @@
 IF(BUILD_TESTING)
 SUBDIRS( Code )
 ENDIF(BUILD_TESTING)
-
+LINK_LIBRARIES(
+  VXLNumerics
+)
 IF(UNIX)
+  LINK_LIBRARIES (
+  -lm
+  )
   IF (NOT ITK_USE_SYSTEM_STDLIB)
   LINK_LIBRARIES (
   -lCio
